[package]
name = "desk-exit-screen"
version = "0.2.0"
homepage = "https://github.com/bnavetta/desk"
repository = "https://github.com/bnavetta/desk.git"
categories = ["command-line-utilities"]
description = "GUI for exiting a desktop environment (logging out, shutting down)"
edition = "2018"
authors = ["Ben Navetta <ben.navetta@gmail.com>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
atk = "0.9"
gio = "0.9"
glib = "0.10"
gdk = { version = "0.13", features = ["v3_22"] }
gtk = "0.9"
dbus = "0.8"
log = "0.4"
env_logger = "0.7"
directories = "3"
serde = { version  = "1", features = ["derive"] }
toml = "0.5"
desk-logind = { path = "../desk-logind", version = "1.1" }