[package]
name = "desk-locker"
version = "1.0.0"
edition = "2018"
authors = ["Ben Navetta <ben.navetta@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
env_logger = "0.7"
log = "0.4"
dbus = "0.8"
xcb = { version = "0.9", features = ["screensaver"] }
structopt = "0.3"
desk-logind = { path = "../desk-logind" }