[package]
name = "desk-locker"
version = "1.0.1"
description = "Screen-locking helper for X11 and systemd"
categories = ["command-line-utilities"]
homepage = "https://github.com/bnavetta/desk"
repository = "https://github.com/bnavetta/desk.git"
edition = "2018"
authors = ["Ben Navetta <ben.navetta@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
env_logger = "0.8"
log = "0.4"
dbus = "0.9"
xcb = { version = "0.9", features = ["screensaver"] }
structopt = "0.3"
desk-logind = { path = "../desk-logind", version = "1.1.1" }