[package]
name = "desk-logind"
version = "1.1.1"
description = "Bindings for the systemd-logind D-Bus API"
categories = ["os::unix-apis"]
homepage = "https://github.com/bnavetta/desk"
repository = "https://github.com/bnavetta/desk.git"

edition = "2018"
authors = ["Ben Navetta <ben.navetta@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
dbus = "0.9"
nix = "0.19"
thiserror = "1.0"
